# flutter-uvc-camera-photobooth

./: MODIFICATION_SAVE_PATH.md  README.md  pubspec.yaml
aar/: libausbc-release.aar  libnative-release.aar  libuvc-release.aar
android/: build.gradle  extract_aars.sh  gradle.properties  settings.gradle
android/libausbc/: build.gradle
android/libausbc/src/main/java/com/jiangdg/ausbc/: MultiCameraClient.kt
android/libausbc/src/main/java/com/jiangdg/ausbc/camera/: CameraUvcStrategy.kt
android/libausbc/src/main/java/com/jiangdg/ausbc/render/: RenderManager.kt
android/libausbc/src/main/java/com/jiangdg/ausbc/utils/: AppUtils.kt  ResourceManager.java  ToastUtils.kt
android/libausbc/src/main/res/layout/: design_bottom_sheet.xml
android/libausbc/src/main/res/values/: colors.xml
android/libnative/: build.gradle
android/libnative/src/main/cpp/: CMakeLists.txt
android/libnative/src/main/cpp/module/mp3/lame/: encoder.c  util.c  util.h
android/libnative/src/main/cpp/proxy/: proxy_yuv.h
android/libuvc/: build.gradle
android/libuvc/src/main/java/com/jiangdg/usb/: USBMonitor.java
android/libuvc/src/main/jni/: Android.mk  Application.mk
android/libuvc/src/main/jni/libuvc/src/: device.c
android/src/main/kotlin/com/chenyeju/: CameraConfigManager.kt  CustomCameraUVC.kt  FlutterUVCCameraPlugin.kt  PermissionManager.kt  UVCCameraView.kt  UVCCameraViewFactory.kt
android/src/main/res/layout/: activity_main.xml
example/lib/: camera.dart
lib/src/: uvc_camera_controller.dart
lib/src/models/: uvc_camera_view_params_entity.dart
(+3 files in other folders)
